--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "Julian Benegas",
     "url": "https://julianbenegas.com"
   },
-  "version": "0.6.6",
+  "version": "0.6.7",
   "main": "./dist/index.js",
   "module": "./dist/index.modern.js",
   "types": "./dist/index.d.ts",
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "prepublish": "yarn build",
+    "prebuild": "rm -rf dist",
     "build": "microbundle --jsx React.createElement --compress --no-sourcemap",
     "test": "jest"
   },
